bloodc/src/parser/snapshots/bloodc__parser__tests__unsafe_block_error.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0117"), message: "`unsafe { }` blocks use `@unsafe { }` syntax in Blood", span: Span { start: 17, end: 23, start_line: 1, start_col: 18 }, labels: [], suggestions: [], source_file: None, source_content: None }]
