bloodc/src/parser/snapshots/bloodc__parser__tests__where_clause_complex.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected type name, `&`, `*`, `[`, `(`, `fn`, `forall`, or `!`, found lifetime", span: Span { start: 64, end: 66, start_line: 4, start_col: 16 }, labels: [], suggestions: [], source_file: None, source_content: None }]
