bloodc/src/parser/snapshots/bloodc__parser__tests__with_handle.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 4,
                        end: 5,
                        start_line: 2,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: WithHandle {
                                    handler: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 19,
                                                                end: 26,
                                                                start_line: 3,
                                                                start_col: 10,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 19,
                                                    end: 26,
                                                    start_line: 3,
                                                    start_col: 10,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 19,
                                            end: 26,
                                            start_line: 3,
                                            start_col: 10,
                                        },
                                    },
                                    body: Expr {
                                        kind: Block(
                                            Block {
                                                statements: [],
                                                expr: Some(
                                                    Expr {
                                                        kind: Perform {
                                                            effect: None,
                                                            operation: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 52,
                                                                    end: 57,
                                                                    start_line: 4,
                                                                    start_col: 17,
                                                                },
                                                            },
                                                            args: [],
                                                        },
                                                        span: Span {
                                                            start: 44,
                                                            end: 63,
                                                            start_line: 4,
                                                            start_col: 9,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 34,
                                                    end: 69,
                                                    start_line: 3,
                                                    start_col: 25,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 34,
                                            end: 69,
                                            start_line: 3,
                                            start_col: 25,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 14,
                                    end: 69,
                                    start_line: 3,
                                    start_col: 5,
                                },
                            },
                        ),
                        span: Span {
                            start: 8,
                            end: 71,
                            start_line: 2,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 1,
                    end: 71,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 71,
        start_line: 2,
        start_col: 1,
    },
}
